fixed the overflow-x style and added some padding to the p tag in the mid-top class div

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -49,7 +49,7 @@ nav {
 
 /* Body */
 body{
-    overflow-x: auto;
+    overflow-x: hidden;
 }
 .content-img{
   width: 50%;
@@ -73,6 +73,8 @@ body{
 .mid-top p{
   width: 50%;
   padding-top: 5%;
+  padding-left: 2%;
+  padding-right: 2%;
   text-align: center;
   display: inline-block;
   font-size: 20px;
